--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,33 +1,58 @@
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto:wght@300;400;500;700&display=swap');
 
 body {
     color: $dark-grey;
     background-color: $white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto, sans-serif;
     max-width: 800px;
     margin: auto;
     padding: 10px 25px;
+    line-height: 1.25em;
+    font-weight: 400;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: $dark-blue
-}
-
-.organization, .titles, .credentials {
+    color: $dark-blue;
     margin: 0;
 }
 
+h1 {
+    font-size: 48px;
+    line-height: 1em;
+    font-weight: 700;
+}
+
+h2 {
+    font-weight: 500;
+}
+
+h3 {
+    font-weight: 400;
+}
+
+h3, .detail {
+    font-family: 'Roboto Condensed';
+}
+
 ul {
-    &.titles, &.credentials {
-        list-style: none;
-        padding: 0;
-        li {
-            color: adjust-color($dark-grey, $lightness: 15%);
-            display: flex;
-            justify-content: space-between;
-        }
-    }
-    &.highlights {
-        list-style: circle;
-    }
+    list-style: circle;
+    padding-left: 30px;
+    margin-bottom: 0;
+}
+
+.detail {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: 300;
+    font-size: 0.9em;
+}
+
+.section {
+    margin-block: 1.75em;
+}
+
+.entry {
+    margin-block: 1.50em;
 }
